@@ -16,8 +16,6 @@ names(dataMean) <- manifests
 latents <- c('G', 'H')
 
 factorModel <- mxModel("Two Factor Matrix",
-      type="RAM",
-	  
 	  mxMatrix(
 		type = "Full",
 		nrow = 5,
